mc1.14.3 ~ 1.18.2
mc1.14.2 env cannot setup, cuz loom will complain `non-unique class target name mappings`